accelerated-domains: add xhjt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91022,6 +91022,7 @@ server=/xhjkgj.com/114.114.114.114
 server=/xhjnyy.com/114.114.114.114
 server=/xhjpzp.com/114.114.114.114
 server=/xhjs168.com/114.114.114.114
+server=/xhjt.com/114.114.114.114
 server=/xhkt.tv/114.114.114.114
 server=/xhlaowu.com/114.114.114.114
 server=/xhlcsl.com/114.114.114.114
