accelerated-domains: add hzhebei.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45094,6 +45094,7 @@ server=/hzh1.com/114.114.114.114
 server=/hzhadx.com/114.114.114.114
 server=/hzhanbo.com/114.114.114.114
 server=/hzhcloud.com/114.114.114.114
+server=/hzhebei.com/114.114.114.114
 server=/hzhehua.com/114.114.114.114
 server=/hzhengtong.com/114.114.114.114
 server=/hzhf.com/114.114.114.114
