--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45138,6 +45138,7 @@ server=/hzjndz.com/114.114.114.114
 server=/hzjqhy.com/114.114.114.114
 server=/hzjtfw.com/114.114.114.114
 server=/hzjtgcjt.com/114.114.114.114
+server=/hzjtjl.com/114.114.114.114
 server=/hzjunglepay.com/114.114.114.114
 server=/hzjuzhi.com/114.114.114.114
 server=/hzjxapp.com/114.114.114.114
