--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45230,6 +45230,7 @@ server=/hzsdyfzfxxx.com/114.114.114.114
 server=/hzsgjj.com/114.114.114.114
 server=/hzsh666.com/114.114.114.114
 server=/hzshanjie.com/114.114.114.114
+server=/hzshantai.com/114.114.114.114
 server=/hzshudian.com/114.114.114.114
 server=/hzslgzx.com/114.114.114.114
 server=/hzsnowcom.com/114.114.114.114
