--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13733,6 +13733,7 @@ server=/bcsgn.com/114.114.114.114
 server=/bcshipgo.com/114.114.114.114
 server=/bcsloong.com/114.114.114.114
 server=/bcsytv.com/114.114.114.114
+server=/bctdtx.com/114.114.114.114
 server=/bctest.com/114.114.114.114
 server=/bctmo.com/114.114.114.114
 server=/bctts.com/114.114.114.114
