accelerated-domains: add lvpu-chem.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58210,6 +58210,7 @@ server=/lvnengliang.com/114.114.114.114
 server=/lvpai114.com/114.114.114.114
 server=/lvpin100.com/114.114.114.114
 server=/lvping.com/114.114.114.114
+server=/lvpu-chem.com/114.114.114.114
 server=/lvqingqichangjia.com/114.114.114.114
 server=/lvrdn.com/114.114.114.114
 server=/lvren.com/114.114.114.114
