accelerated-domains: add zhengbiaoke.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100466,6 +100466,7 @@ server=/zhending-chicken.com/114.114.114.114
 server=/zhendonggames.com/114.114.114.114
 server=/zhenfacloud.com/114.114.114.114
 server=/zhenfund.com/114.114.114.114
+server=/zhengbiaoke.com/114.114.114.114
 server=/zhengcaimall.com/114.114.114.114
 server=/zhengcaishangcheng.com/114.114.114.114
 server=/zhengcehui.com/114.114.114.114
