accelerated-domains: add chinazhijiang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20462,6 +20462,7 @@ server=/chinaz.net/114.114.114.114
 server=/chinazbd.com/114.114.114.114
 server=/chinazhaoye.com/114.114.114.114
 server=/chinazhifu.com/114.114.114.114
+server=/chinazhijiang.com/114.114.114.114
 server=/chinazhixiong.com/114.114.114.114
 server=/chinazikao.com/114.114.114.114
 server=/chinazjph.com/114.114.114.114
