accelerated-domains: add hzbjwy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45015,6 +45015,7 @@ server=/hzbhsh.com/114.114.114.114
 server=/hzbianqing.com/114.114.114.114
 server=/hzbianqu.com/114.114.114.114
 server=/hzbike.com/114.114.114.114
+server=/hzbjwy.com/114.114.114.114
 server=/hzbk.net/114.114.114.114
 server=/hzbohai.com/114.114.114.114
 server=/hzbomed.com/114.114.114.114
