accelerated-domains: add hzebang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45064,6 +45064,7 @@ server=/hzdq.com/114.114.114.114
 server=/hzdsrmyy.com/114.114.114.114
 server=/hzdtv.tv/114.114.114.114
 server=/hzdx.com/114.114.114.114
+server=/hzebang.com/114.114.114.114
 server=/hzecsemir.com/114.114.114.114
 server=/hzeeec.com/114.114.114.114
 server=/hzefjs.com/114.114.114.114
