accelerated-domains: add hzhnano.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45109,6 +45109,7 @@ server=/hzhisoft.com/114.114.114.114
 server=/hzhkai.com/114.114.114.114
 server=/hzhlpt.com/114.114.114.114
 server=/hzhltec.com/114.114.114.114
+server=/hzhnano.com/114.114.114.114
 server=/hzhongou.com/114.114.114.114
 server=/hzhqdj.com/114.114.114.114
 server=/hzhqqz.com/114.114.114.114
