--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59822,6 +59822,7 @@ server=/mei.com/114.114.114.114
 server=/mei1.com/114.114.114.114
 server=/mei1.info/114.114.114.114
 server=/meia.me/114.114.114.114
+server=/meianclean.com/114.114.114.114
 server=/meianjuwang.com/114.114.114.114
 server=/meiaoju.com/114.114.114.114
 server=/meiba.com/114.114.114.114
