accelerated-domains: add silicon-magic.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76649,6 +76649,7 @@ server=/silexmicro.com/114.114.114.114
 server=/silianmall.com/114.114.114.114
 server=/siliaobaba.com/114.114.114.114
 server=/siliaokelijixie.com/114.114.114.114
+server=/silicon-magic.com/114.114.114.114
 server=/siliconvisionlabs.com/114.114.114.114
 server=/silikron.com/114.114.114.114
 server=/silinchen.com/114.114.114.114
