accelerated-domains: add trisfal.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83264,6 +83264,7 @@ server=/tripurx.com/114.114.114.114
 server=/tripvivid.com/114.114.114.114
 server=/tripwirechina.com/114.114.114.114
 server=/triring.com/114.114.114.114
+server=/trisfal.com/114.114.114.114
 server=/triton-games.com/114.114.114.114
 server=/tritoninfo.net/114.114.114.114
 server=/trizinfo.tech/114.114.114.114
