accelerated-domains: add fast-eyes.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30855,6 +30855,7 @@ server=/fashionszshow.com/114.114.114.114
 server=/fashiontrenddigest.com/114.114.114.114
 server=/fashuounion.com/114.114.114.114
 server=/fasionchan.com/114.114.114.114
+server=/fast-eyes.com/114.114.114.114
 server=/fast-heat-cartridge-heaters.com/114.114.114.114
 server=/fast-pregnancy.com/114.114.114.114
 server=/fast.im/114.114.114.114
