accelerated-domains: add hcj1952.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40626,6 +40626,7 @@ server=/hchlidc.com/114.114.114.114
 server=/hchliot.com/114.114.114.114
 server=/hcicloud.com/114.114.114.114
 server=/hcinfo.tech/114.114.114.114
+server=/hcj1952.com/114.114.114.114
 server=/hcjgy.com/114.114.114.114
 server=/hclonely.com/114.114.114.114
 server=/hclouder.com/114.114.114.114
