--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40895,6 +40895,7 @@ server=/hecdn.net/114.114.114.114
 server=/hechaji.com/114.114.114.114
 server=/hechangquan.com/114.114.114.114
 server=/hechangshipin.com/114.114.114.114
+server=/hechangtech.com/114.114.114.114
 server=/hechengbb.com/114.114.114.114
 server=/hechiguotou.com/114.114.114.114
 server=/hechijinxin.com/114.114.114.114
