accelerated-domains: add htcee.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43401,6 +43401,7 @@ server=/htbenet.net/114.114.114.114
 server=/htbmsc.com/114.114.114.114
 server=/htc-media.com/114.114.114.114
 server=/htcases.com/114.114.114.114
+server=/htcee.com/114.114.114.114
 server=/htcis.net/114.114.114.114
 server=/htcxfund.com/114.114.114.114
 server=/htd2000.com/114.114.114.114
