--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45191,6 +45191,7 @@ server=/hzmobius.com/114.114.114.114
 server=/hzmogo.com/114.114.114.114
 server=/hzmtg.com/114.114.114.114
 server=/hzmxkj.net/114.114.114.114
+server=/hzmygg.com/114.114.114.114
 server=/hzmylike.com/114.114.114.114
 server=/hzncc.com/114.114.114.114
 server=/hznet.tv/114.114.114.114
