accelerated-domains: add xingchuangcar.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92080,6 +92080,7 @@ server=/xingbo.tv/114.114.114.114
 server=/xingchao1.com/114.114.114.114
 server=/xingchenjia.com/114.114.114.114
 server=/xingcheshixian.com/114.114.114.114
+server=/xingchuangcar.com/114.114.114.114
 server=/xingchuangtiandi.com/114.114.114.114
 server=/xingdajt.com/114.114.114.114
 server=/xingdatrip.com/114.114.114.114
