--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101854,6 +101854,7 @@ server=/zjairports.com/114.114.114.114
 server=/zjaqxy.com/114.114.114.114
 server=/zjautoparts.com/114.114.114.114
 server=/zjbaixiang.com/114.114.114.114
+server=/zjbanger.com/114.114.114.114
 server=/zjbdt.com/114.114.114.114
 server=/zjbelong.com/114.114.114.114
 server=/zjbinya.com/114.114.114.114
