accelerated-domains: add dycnchem.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28264,6 +28264,7 @@ server=/dycdn.com/114.114.114.114
 server=/dycic.net/114.114.114.114
 server=/dycloud.run/114.114.114.114
 server=/dycloudbk.com/114.114.114.114
+server=/dycnchem.com/114.114.114.114
 server=/dycom365.com/114.114.114.114
 server=/dycyw.com/114.114.114.114
 server=/dydab.com/114.114.114.114
