--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45043,6 +45043,7 @@ server=/hzcdyyhc.com/114.114.114.114
 server=/hzcdyyyc.com/114.114.114.114
 server=/hzcekong.com/114.114.114.114
 server=/hzch.org/114.114.114.114
+server=/hzchaoxiang.com/114.114.114.114
 server=/hzchengdun.com/114.114.114.114
 server=/hzchengdun.net/114.114.114.114
 server=/hzchgj.com/114.114.114.114
