--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15837,6 +15837,7 @@ server=/bmh1958.com/114.114.114.114
 server=/bmijs.com/114.114.114.114
 server=/bmimage.com/114.114.114.114
 server=/bmjet.com/114.114.114.114
+server=/bmjzkj.com/114.114.114.114
 server=/bml365.com/114.114.114.114
 server=/bmlink.com/114.114.114.114
 server=/bmlxkj.com/114.114.114.114
