accelerated-domains: add dartzon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25015,6 +25015,7 @@ server=/darseek.com/114.114.114.114
 server=/dartchina.com/114.114.114.114
 server=/dartou.com/114.114.114.114
 server=/dartrun.net/114.114.114.114
+server=/dartzon.com/114.114.114.114
 server=/daruan.com/114.114.114.114
 server=/darwinlearns.com/114.114.114.114
 server=/dasctf.com/114.114.114.114
