--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26326,6 +26326,7 @@ server=/digiinfr.com/114.114.114.114
 server=/digirepub.com/114.114.114.114
 server=/digisky.com/114.114.114.114
 server=/digit3ds.com/114.114.114.114
+server=/digital-hangzhou.com/114.114.114.114
 server=/digital-ren.com/114.114.114.114
 server=/digitalchina.com/114.114.114.114
 server=/digitalcloudshield.com/114.114.114.114
