accelerated-domains: add hangzhouleili.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39683,6 +39683,7 @@ server=/hangzhouboiler.com/114.114.114.114
 server=/hangzhoufcw.com/114.114.114.114
 server=/hangzhoufujikura.com/114.114.114.114
 server=/hangzhoujizhang.com/114.114.114.114
+server=/hangzhouleili.com/114.114.114.114
 server=/hangzhouluohu.com/114.114.114.114
 server=/hangzhoumengfa.com/114.114.114.114
 server=/hangzhouqisheng.com/114.114.114.114
