accelerated-domains: add sanqianzhihui.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73167,6 +73167,7 @@ server=/sanmicun.com/114.114.114.114
 server=/sanniaokeji.com/114.114.114.114
 server=/sanpowergroup.com/114.114.114.114
 server=/sanpuzhiyao.com/114.114.114.114
+server=/sanqianzhihui.com/114.114.114.114
 server=/sanqin.com/114.114.114.114
 server=/sanqindaily.com/114.114.114.114
 server=/sanqingchuanmei.com/114.114.114.114
