--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75840,6 +75840,7 @@ server=/shojo.cc/114.114.114.114
 server=/shokan.org/114.114.114.114
 server=/shokw.com/114.114.114.114
 server=/sholaser.com/114.114.114.114
+server=/shollper.com/114.114.114.114
 server=/shomop.com/114.114.114.114
 server=/shomyq.com/114.114.114.114
 server=/shootmedia.net/114.114.114.114
