--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99650,6 +99650,7 @@ server=/zdao.com/114.114.114.114
 server=/zdaoxb.com/114.114.114.114
 server=/zdaye.com/114.114.114.114
 server=/zdbfjj.com/114.114.114.114
+server=/zdbiogene.com/114.114.114.114
 server=/zdbnm.com/114.114.114.114
 server=/zdcj.net/114.114.114.114
 server=/zdcjw18.com/114.114.114.114
