--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22121,6 +22121,7 @@ server=/cnhbql.com/114.114.114.114
 server=/cnhbstock.com/114.114.114.114
 server=/cnhbtc.com/114.114.114.114
 server=/cnhd.com/114.114.114.114
+server=/cnheader.com/114.114.114.114
 server=/cnhenda.com/114.114.114.114
 server=/cnhhgjx.com/114.114.114.114
 server=/cnhhl.com/114.114.114.114
