--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44996,6 +44996,7 @@ server=/hz-sllace.com/114.114.114.114
 server=/hz-spring.net/114.114.114.114
 server=/hz-tire.com/114.114.114.114
 server=/hz-winone.com/114.114.114.114
+server=/hz-xiaofei.com/114.114.114.114
 server=/hz-xin.com/114.114.114.114
 server=/hz-zjsh.com/114.114.114.114
 server=/hz-zq.com/114.114.114.114
