--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49401,6 +49401,7 @@ server=/jiebide.xin/114.114.114.114
 server=/jiecao.com/114.114.114.114
 server=/jiechengcehui.com/114.114.114.114
 server=/jiechengcloud.com/114.114.114.114
+server=/jiechikeji.com/114.114.114.114
 server=/jiedaibao.com/114.114.114.114
 server=/jiediankeji.com/114.114.114.114
 server=/jiedu.fun/114.114.114.114
