--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45341,6 +45341,7 @@ server=/hzzh.com/114.114.114.114
 server=/hzzhaobiao.com/114.114.114.114
 server=/hzzhileng.com/114.114.114.114
 server=/hzzhonggang.net/114.114.114.114
+server=/hzzhonghao.com/114.114.114.114
 server=/hzzhyl.com/114.114.114.114
 server=/hzzhzm.com/114.114.114.114
 server=/hzzkj.net/114.114.114.114
