accelerated-domains: add renhaocw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71764,6 +71764,7 @@ server=/renergy-me.com/114.114.114.114
 server=/renfei.net/114.114.114.114
 server=/renfutm.com/114.114.114.114
 server=/renguokeji.com/114.114.114.114
+server=/renhaocw.com/114.114.114.114
 server=/renhe888.com/114.114.114.114
 server=/renhence.com/114.114.114.114
 server=/renhuaicode.com/114.114.114.114
