--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77386,6 +77386,7 @@ server=/smart.com/114.114.114.114
 server=/smart365ol.com/114.114.114.114
 server=/smartautoclub.com/114.114.114.114
 server=/smartbgp.com/114.114.114.114
+server=/smartchn.com/114.114.114.114
 server=/smartcity.team/114.114.114.114
 server=/smartcloudcon.com/114.114.114.114
 server=/smartcom.cc/114.114.114.114
