accelerated-domains: add vanwarmgroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85420,6 +85420,7 @@ server=/vanrui.com/114.114.114.114
 server=/vanvps.com/114.114.114.114
 server=/vanward.com/114.114.114.114
 server=/vanwardsmart.com/114.114.114.114
+server=/vanwarmgroup.com/114.114.114.114
 server=/vanyee.net/114.114.114.114
 server=/vanzol.com/114.114.114.114
 server=/vaopo.com/114.114.114.114
