accelerated-domains: add ytpowder.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97968,6 +97968,7 @@ server=/ytoglobal.com/114.114.114.114
 server=/ytokj.com/114.114.114.114
 server=/ytop8.com/114.114.114.114
 server=/ytphq.com/114.114.114.114
+server=/ytpowder.com/114.114.114.114
 server=/ytpp.com/114.114.114.114
 server=/ytqh-electric.com/114.114.114.114
 server=/ytrbyr.lol/114.114.114.114
