--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99748,6 +99748,7 @@ server=/zebred.com/114.114.114.114
 server=/zechenmuye.com/114.114.114.114
 server=/zeda1.com/114.114.114.114
 server=/zedsy.com/114.114.114.114
+server=/zeedao.com/114.114.114.114
 server=/zeekrlife.com/114.114.114.114
 server=/zeelis.com/114.114.114.114
 server=/zeesin.com/114.114.114.114
