accelerated-domains: add zwgfood.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103093,6 +103093,7 @@ server=/zwechat.com/114.114.114.114
 server=/zwefu.com/114.114.114.114
 server=/zwfw.com/114.114.114.114
 server=/zwgeek.com/114.114.114.114
+server=/zwgfood.com/114.114.114.114
 server=/zwggb.com/114.114.114.114
 server=/zwgjpx.com/114.114.114.114
 server=/zwgx.com/114.114.114.114
