accelerated-domains: add honglimfg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42727,6 +42727,7 @@ server=/hongku.com/114.114.114.114
 server=/hongkun-tech.com/114.114.114.114
 server=/hongkunjinfu.com/114.114.114.114
 server=/honglans.com/114.114.114.114
+server=/honglimfg.com/114.114.114.114
 server=/honglimingbiao.com/114.114.114.114
 server=/honglipai.net/114.114.114.114
 server=/honglulan.com/114.114.114.114
