--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45116,6 +45116,7 @@ server=/hzhanbo.com/114.114.114.114
 server=/hzhcloud.com/114.114.114.114
 server=/hzhebei.com/114.114.114.114
 server=/hzhehua.com/114.114.114.114
+server=/hzhehui.com/114.114.114.114
 server=/hzhengtong.com/114.114.114.114
 server=/hzhf.com/114.114.114.114
 server=/hzhfzx.com/114.114.114.114
