accelerated-domains: add yegrand.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95397,6 +95397,7 @@ server=/yefengs.com/114.114.114.114
 server=/yegame.com/114.114.114.114
 server=/yegenyou.com/114.114.114.114
 server=/yegoo.com/114.114.114.114
+server=/yegrand.com/114.114.114.114
 server=/yeguohd.com/114.114.114.114
 server=/yehoochina.com/114.114.114.114
 server=/yeidc.com/114.114.114.114
