accelerated-domains: add jzpat.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52297,6 +52297,7 @@ server=/jzmsmj.com/114.114.114.114
 server=/jzmt.net/114.114.114.114
 server=/jznyjt.com/114.114.114.114
 server=/jzongguan.com/114.114.114.114
+server=/jzpat.com/114.114.114.114
 server=/jzpbuy.com/114.114.114.114
 server=/jzpu.com/114.114.114.114
 server=/jzqe.com/114.114.114.114
