accelerated-domains: add kaierda.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52416,6 +52416,7 @@ server=/kaidanbao.com/114.114.114.114
 server=/kaidany.com/114.114.114.114
 server=/kaidianbang.com/114.114.114.114
 server=/kaidicloud.com/114.114.114.114
+server=/kaierda.com/114.114.114.114
 server=/kaifabang.com/114.114.114.114
 server=/kaifae.com/114.114.114.114
 server=/kaifage.com/114.114.114.114
