accelerated-domains: add cnflyinghorse.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22065,6 +22065,7 @@ server=/cnfish.com/114.114.114.114
 server=/cnfisher.com/114.114.114.114
 server=/cnfla.com/114.114.114.114
 server=/cnflcy.com/114.114.114.114
+server=/cnflyinghorse.com/114.114.114.114
 server=/cnfol.com/114.114.114.114
 server=/cnfolimg.com/114.114.114.114
 server=/cnfood.com/114.114.114.114
