--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36322,6 +36322,7 @@ server=/guoshengtech.com/114.114.114.114
 server=/guoshi.com/114.114.114.114
 server=/guoshusir.com/114.114.114.114
 server=/guosujt.com/114.114.114.114
+server=/guotaijsh.com/114.114.114.114
 server=/guotailiangyou.com/114.114.114.114
 server=/guoturen.com/114.114.114.114
 server=/guotv.com/114.114.114.114
