accelerated-domains: add huaduanbio.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43561,6 +43561,7 @@ server=/huadingxuan.com/114.114.114.114
 server=/huadonghospital.com/114.114.114.114
 server=/huadongmedia.com/114.114.114.114
 server=/huadream.com/114.114.114.114
+server=/huaduanbio.com/114.114.114.114
 server=/huadun315.com/114.114.114.114
 server=/huaduocai.net/114.114.114.114
 server=/huaease.net/114.114.114.114
