--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45176,6 +45176,7 @@ server=/hzkaiming.com/114.114.114.114
 server=/hzkangji.com/114.114.114.114
 server=/hzkayo.com/114.114.114.114
 server=/hzkcck.com/114.114.114.114
+server=/hzkesheng.com/114.114.114.114
 server=/hzkln.com/114.114.114.114
 server=/hzklyy.com/114.114.114.114
 server=/hzkshx.com/114.114.114.114
