--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49799,6 +49799,7 @@ server=/jingyeqian.com/114.114.114.114
 server=/jingyi186.com/114.114.114.114
 server=/jingyinb.com/114.114.114.114
 server=/jingyingyicheng.com/114.114.114.114
+server=/jingyitech.com/114.114.114.114
 server=/jingyougz.com/114.114.114.114
 server=/jingytech.com/114.114.114.114
 server=/jingyu.com/114.114.114.114
