accelerated-domains: add lhjdfs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55954,6 +55954,7 @@ server=/lhgcxx.com/114.114.114.114
 server=/lhguomy.xyz/114.114.114.114
 server=/lhgz.net/114.114.114.114
 server=/lhh.la/114.114.114.114
+server=/lhjdfs.com/114.114.114.114
 server=/lhjws.com/114.114.114.114
 server=/lhjyy.com/114.114.114.114
 server=/lhjzlw.com/114.114.114.114
