--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65470,6 +65470,7 @@ server=/oahelp.net/114.114.114.114
 server=/oaimai.com/114.114.114.114
 server=/oait360.com/114.114.114.114
 server=/oajdsr.xyz/114.114.114.114
+server=/oak-amc.com/114.114.114.114
 server=/oaklandjs.com/114.114.114.114
 server=/oaloft.com/114.114.114.114
 server=/oaloft.net/114.114.114.114
