--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88024,6 +88024,7 @@ server=/westengine.com/114.114.114.114
 server=/westernxtheshow.com/114.114.114.114
 server=/westfutu.com/114.114.114.114
 server=/westinfosoft.com/114.114.114.114
+server=/westlake-vacuum.com/114.114.114.114
 server=/westlakegenetech.com/114.114.114.114
 server=/westlakeinst.com/114.114.114.114
 server=/westlakeomics.com/114.114.114.114
