accelerated-domains: add zzicpa.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -103482,6 +103482,7 @@ server=/zzhaoz.com/114.114.114.114
 server=/zzhuanruan.com/114.114.114.114
 server=/zzhx56.com/114.114.114.114
 server=/zzhybz.com/114.114.114.114
+server=/zzicpa.com/114.114.114.114
 server=/zzidc.com/114.114.114.114
 server=/zzjianyun.com/114.114.114.114
 server=/zzjsled.com/114.114.114.114
