accelerated-domains: add betteryeah.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14309,6 +14309,7 @@ server=/bettapharma.com/114.114.114.114
 server=/bettbio.com/114.114.114.114
 server=/better365.com/114.114.114.114
 server=/betteredu.net/114.114.114.114
+server=/betteryeah.com/114.114.114.114
 server=/betterzip.net/114.114.114.114
 server=/betterzipcn.com/114.114.114.114
 server=/beuyinm.com/114.114.114.114
