accelerated-domains: add qifeizn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69480,6 +69480,7 @@ server=/qifandianlansh.com/114.114.114.114
 server=/qifangw.com/114.114.114.114
 server=/qifeiy.com/114.114.114.114
 server=/qifeiye.com/114.114.114.114
+server=/qifeizn.com/114.114.114.114
 server=/qifeng-safety.com/114.114.114.114
 server=/qifenxiao.com/114.114.114.114
 server=/qifu.me/114.114.114.114
