--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55761,6 +55761,7 @@ server=/leting.io/114.114.114.114
 server=/letotur.com/114.114.114.114
 server=/letou8.com/114.114.114.114
 server=/letoursport.com/114.114.114.114
+server=/letright.com/114.114.114.114
 server=/letrychina.com/114.114.114.114
 server=/lets-study.com/114.114.114.114
 server=/letschuhai.com/114.114.114.114
