accelerated-domains: add derunbao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25683,6 +25683,7 @@ server=/dercase.com/114.114.114.114
 server=/derekchou.com/114.114.114.114
 server=/derenbs.com/114.114.114.114
 server=/derucci.com/114.114.114.114
+server=/derunbao.com/114.114.114.114
 server=/derunss.com/114.114.114.114
 server=/deruxi.com/114.114.114.114
 server=/derzh.com/114.114.114.114
