accelerated-domains: add huachengjx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43546,6 +43546,7 @@ server=/huacaole.com/114.114.114.114
 server=/huacaoshumu.net/114.114.114.114
 server=/huacemedia.com/114.114.114.114
 server=/huachengenjoy.com/114.114.114.114
+server=/huachengjx.com/114.114.114.114
 server=/huachenit.com/114.114.114.114
 server=/huachenyuanyang.com/114.114.114.114
 server=/huachuang.fun/114.114.114.114
