accelerated-domains: add hzglsb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45105,6 +45105,7 @@ server=/hzfuturehos.com/114.114.114.114
 server=/hzgangdun.com/114.114.114.114
 server=/hzgh.org/114.114.114.114
 server=/hzgjj.com/114.114.114.114
+server=/hzglsb.com/114.114.114.114
 server=/hzgmwl.com/114.114.114.114
 server=/hzgolong.com/114.114.114.114
 server=/hzgoyuan.com/114.114.114.114
