--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45209,6 +45209,7 @@ server=/hzmetro.com/114.114.114.114
 server=/hzmkdq.com/114.114.114.114
 server=/hzmobius.com/114.114.114.114
 server=/hzmogo.com/114.114.114.114
+server=/hzmt001.com/114.114.114.114
 server=/hzmtg.com/114.114.114.114
 server=/hzmxkj.net/114.114.114.114
 server=/hzmygg.com/114.114.114.114
