accelerated-domains: add pinpointloc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67619,6 +67619,7 @@ server=/pinpai9999.com/114.114.114.114
 server=/pinpaidadao.com/114.114.114.114
 server=/pinpailiu.com/114.114.114.114
 server=/pinpaime.com/114.114.114.114
+server=/pinpointloc.com/114.114.114.114
 server=/pinpopt.site/114.114.114.114
 server=/pinqugongxiangktv.com/114.114.114.114
 server=/pinqukeji.com/114.114.114.114
