accelerated-domains: add pxcoex.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68624,6 +68624,7 @@ server=/pxb7.com/114.114.114.114
 server=/pxbgp.com/114.114.114.114
 server=/pxc33.com/114.114.114.114
 server=/pxcn168.com/114.114.114.114
+server=/pxcoex.com/114.114.114.114
 server=/pxdier.net/114.114.114.114
 server=/pxemba.com/114.114.114.114
 server=/pxene.com/114.114.114.114
