--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88022,6 +88022,7 @@ server=/west.xyz/114.114.114.114
 server=/west263.com/114.114.114.114
 server=/west95582.com/114.114.114.114
 server=/west999.com/114.114.114.114
+server=/westanpharma.com/114.114.114.114
 server=/westarcloud.com/114.114.114.114
 server=/westbund.art/114.114.114.114
 server=/westbund.com/114.114.114.114
