accelerated-domains: add yiyusemi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96576,6 +96576,7 @@ server=/yiyum.com/114.114.114.114
 server=/yiyun518.com/114.114.114.114
 server=/yiyunhulian.xyz/114.114.114.114
 server=/yiyupack.com/114.114.114.114
+server=/yiyusemi.com/114.114.114.114
 server=/yiz.vip/114.114.114.114
 server=/yizanmeiye.com/114.114.114.114
 server=/yizenb.com/114.114.114.114
