--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22348,6 +22348,7 @@ server=/cnpiecgb.com/114.114.114.114
 server=/cnpiecsb.com/114.114.114.114
 server=/cnpingpang.com/114.114.114.114
 server=/cnpkm.com/114.114.114.114
+server=/cnplanetary.com/114.114.114.114
 server=/cnplugins.com/114.114.114.114
 server=/cnpmjs.org/114.114.114.114
 server=/cnpoli.com/114.114.114.114
