--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44830,6 +44830,7 @@ server=/hxz.ink/114.114.114.114
 server=/hxzq.net/114.114.114.114
 server=/hy-express.com/114.114.114.114
 server=/hy-la.com/114.114.114.114
+server=/hy-tp.com/114.114.114.114
 server=/hy-zr.com/114.114.114.114
 server=/hy01888.com/114.114.114.114
 server=/hy05190134.com/114.114.114.114
