--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78610,6 +78610,7 @@ server=/starswar.org/114.114.114.114
 server=/start.htc.com/114.114.114.114
 server=/start.htcsense.com/114.114.114.114
 server=/startcarlife.com/114.114.114.114
+server=/startdt.com/114.114.114.114
 server=/startech.ltd/114.114.114.114
 server=/starting2000.com/114.114.114.114
 server=/startogether1.com/114.114.114.114
