accelerated-domains: add hzhoisting.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45136,6 +45136,7 @@ server=/hzhkai.com/114.114.114.114
 server=/hzhlpt.com/114.114.114.114
 server=/hzhltec.com/114.114.114.114
 server=/hzhnano.com/114.114.114.114
+server=/hzhoisting.com/114.114.114.114
 server=/hzhongou.com/114.114.114.114
 server=/hzhqdj.com/114.114.114.114
 server=/hzhqqz.com/114.114.114.114
