--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45147,6 +45147,7 @@ server=/hzhtlh.com/114.114.114.114
 server=/hzhuang.wang/114.114.114.114
 server=/hzhuning.com/114.114.114.114
 server=/hzhx.com/114.114.114.114
+server=/hzhxfy88888.com/114.114.114.114
 server=/hzhyqp.com/114.114.114.114
 server=/hzimc.com/114.114.114.114
 server=/hzins.com/114.114.114.114
