accelerated-domains: add unifound.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84804,6 +84804,7 @@ server=/unicon-hibar.com/114.114.114.114
 server=/unietec.net/114.114.114.114
 server=/uniexhibition.com/114.114.114.114
 server=/unifl-networks.com/114.114.114.114
+server=/unifound.net/114.114.114.114
 server=/unifull.com/114.114.114.114
 server=/unifycarbon.com/114.114.114.114
 server=/unigress.com/114.114.114.114
