--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43178,6 +43178,7 @@ server=/hr2002.com/114.114.114.114
 server=/hr2003.com/114.114.114.114
 server=/hr2trainer.com/114.114.114.114
 server=/hr369.com/114.114.114.114
+server=/hr3ds.com/114.114.114.114
 server=/hr448.com/114.114.114.114
 server=/hr510.com/114.114.114.114
 server=/hr5156.com/114.114.114.114
