--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45072,6 +45072,7 @@ server=/hzcopyright.com/114.114.114.114
 server=/hzcourse.com/114.114.114.114
 server=/hzcphotonics.com/114.114.114.114
 server=/hzctjs.com/114.114.114.114
+server=/hzctkj.com/114.114.114.114
 server=/hzctxh.com/114.114.114.114
 server=/hzcybb.xyz/114.114.114.114
 server=/hzdajiangdong.com/114.114.114.114
