--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45135,6 +45135,7 @@ server=/hzhfzx.com/114.114.114.114
 server=/hzhike.com/114.114.114.114
 server=/hzhisoft.com/114.114.114.114
 server=/hzhkai.com/114.114.114.114
+server=/hzhlcc.com/114.114.114.114
 server=/hzhlpt.com/114.114.114.114
 server=/hzhltec.com/114.114.114.114
 server=/hzhnano.com/114.114.114.114
