--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57074,6 +57074,7 @@ server=/lj-group.com/114.114.114.114
 server=/lj168.com/114.114.114.114
 server=/ljbao.net/114.114.114.114
 server=/ljcdn.com/114.114.114.114
+server=/ljhjny.com/114.114.114.114
 server=/ljhks.com/114.114.114.114
 server=/ljia.com/114.114.114.114
 server=/ljia.net/114.114.114.114
