--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45358,6 +45358,7 @@ server=/hzzbco.com/114.114.114.114
 server=/hzzfxx.com/114.114.114.114
 server=/hzzh.com/114.114.114.114
 server=/hzzhaobiao.com/114.114.114.114
+server=/hzzhhd.com/114.114.114.114
 server=/hzzhileng.com/114.114.114.114
 server=/hzzhonggang.net/114.114.114.114
 server=/hzzhonghao.com/114.114.114.114
