accelerated-domains: add huadiplan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43563,6 +43563,7 @@ server=/huaderack.com/114.114.114.114
 server=/huadiansc.com/114.114.114.114
 server=/huadie.com/114.114.114.114
 server=/huadingxuan.com/114.114.114.114
+server=/huadiplan.com/114.114.114.114
 server=/huadonghospital.com/114.114.114.114
 server=/huadongmedia.com/114.114.114.114
 server=/huadream.com/114.114.114.114
