accelerated-domains: add hzcables.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45050,6 +45050,7 @@ server=/hzboxuan.com/114.114.114.114
 server=/hzbpm.com/114.114.114.114
 server=/hzbxm.com/114.114.114.114
 server=/hzc.com/114.114.114.114
+server=/hzcables.com/114.114.114.114
 server=/hzcbparking.com/114.114.114.114
 server=/hzccb.net/114.114.114.114
 server=/hzccnet.com/114.114.114.114
