--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45259,6 +45259,7 @@ server=/hzrlciec.com/114.114.114.114
 server=/hzrobam.com/114.114.114.114
 server=/hzrqgf.com/114.114.114.114
 server=/hzrsl.com/114.114.114.114
+server=/hzrxsoft.com/114.114.114.114
 server=/hzs2sc.com/114.114.114.114
 server=/hzs360.com/114.114.114.114
 server=/hzsaifang.com/114.114.114.114
