--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52827,6 +52827,7 @@ server=/kbiao.me/114.114.114.114
 server=/kbiquge8.com/114.114.114.114
 server=/kblcdn.com/114.114.114.114
 server=/kblin.com/114.114.114.114
+server=/kbmlifesci.com/114.114.114.114
 server=/kbngy.com/114.114.114.114
 server=/kbnhp.com/114.114.114.114
 server=/kbnqy.com/114.114.114.114
