--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99369,6 +99369,7 @@ server=/z1987.com/114.114.114.114
 server=/z1cdn.com/114.114.114.114
 server=/z211.vip/114.114.114.114
 server=/z28j.com/114.114.114.114
+server=/z2chain.com/114.114.114.114
 server=/z2ehospital.com/114.114.114.114
 server=/z2imc.com/114.114.114.114
 server=/z2sci.com/114.114.114.114
