--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101302,6 +101302,7 @@ server=/zhouhing.com/114.114.114.114
 server=/zhouhoulin.com/114.114.114.114
 server=/zhoujiahong.com/114.114.114.114
 server=/zhoujianhui.com/114.114.114.114
+server=/zhoujifood.com/114.114.114.114
 server=/zhoukaiwen.com/114.114.114.114
 server=/zhoulaoshi.club/114.114.114.114
 server=/zhoulingjie.com/114.114.114.114
