accelerated-domains: add hz-zhuce.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45010,6 +45010,7 @@ server=/hz-tire.com/114.114.114.114
 server=/hz-winone.com/114.114.114.114
 server=/hz-xiaofei.com/114.114.114.114
 server=/hz-xin.com/114.114.114.114
+server=/hz-zhuce.com/114.114.114.114
 server=/hz-zjsh.com/114.114.114.114
 server=/hz-zq.com/114.114.114.114
 server=/hz2y.com/114.114.114.114
