accelerated-domains: add hzyhjg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45343,6 +45343,7 @@ server=/hzxyns.com/114.114.114.114
 server=/hzxywlkj.com/114.114.114.114
 server=/hzyanglao.com/114.114.114.114
 server=/hzyestar.com/114.114.114.114
+server=/hzyhjg.com/114.114.114.114
 server=/hzyhzp.com/114.114.114.114
 server=/hzyidc.com/114.114.114.114
 server=/hzyllh.com/114.114.114.114
