accelerated-domains: add wp-hz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89433,6 +89433,7 @@ server=/wozhua.mobi/114.114.114.114
 server=/wozhuan.com/114.114.114.114
 server=/wozhuye.com/114.114.114.114
 server=/wp-china-yes.net/114.114.114.114
+server=/wp-hz.com/114.114.114.114
 server=/wp10.cc/114.114.114.114
 server=/wpan123.com/114.114.114.114
 server=/wpceo.com/114.114.114.114
