accelerated-domains: add zjhzjtjt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102004,6 +102004,7 @@ server=/zjhui.net/114.114.114.114
 server=/zjhx520.com/114.114.114.114
 server=/zjhyrcb.com/114.114.114.114
 server=/zjhzgy.com/114.114.114.114
+server=/zjhzjtjt.com/114.114.114.114
 server=/zjhzkq.com/114.114.114.114
 server=/zjhzwjl.com/114.114.114.114
 server=/zjhzxc.com/114.114.114.114
