--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45142,6 +45142,7 @@ server=/hzhlcc.com/114.114.114.114
 server=/hzhlpt.com/114.114.114.114
 server=/hzhltec.com/114.114.114.114
 server=/hzhnano.com/114.114.114.114
+server=/hzhnzdh.com/114.114.114.114
 server=/hzhoisting.com/114.114.114.114
 server=/hzhongou.com/114.114.114.114
 server=/hzhqdj.com/114.114.114.114
