--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45370,6 +45370,7 @@ server=/hzzhonggang.net/114.114.114.114
 server=/hzzhonghao.com/114.114.114.114
 server=/hzzhyl.com/114.114.114.114
 server=/hzzhzm.com/114.114.114.114
+server=/hzzjzk.com/114.114.114.114
 server=/hzzkj.net/114.114.114.114
 server=/hzzp.com/114.114.114.114
 server=/hzzrmc.com/114.114.114.114
