--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45366,6 +45366,7 @@ server=/hzzh.com/114.114.114.114
 server=/hzzhaobiao.com/114.114.114.114
 server=/hzzhhd.com/114.114.114.114
 server=/hzzhileng.com/114.114.114.114
+server=/hzzhiwei.com/114.114.114.114
 server=/hzzhonggang.net/114.114.114.114
 server=/hzzhonghao.com/114.114.114.114
 server=/hzzhyl.com/114.114.114.114
