accelerated-domains: add nuptec.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65285,6 +65285,7 @@ server=/nuoye.xyz/114.114.114.114
 server=/nuozhan.com/114.114.114.114
 server=/nuozhensh.com/114.114.114.114
 server=/nupktsz.com/114.114.114.114
+server=/nuptec.com/114.114.114.114
 server=/nuqixi.com/114.114.114.114
 server=/nuqk.com/114.114.114.114
 server=/nuszar.xyz/114.114.114.114
