accelerated-domains: add wwhlian.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90026,6 +90026,7 @@ server=/wwenglish.org/114.114.114.114
 server=/wwentua.com/114.114.114.114
 server=/wwepcbv.com/114.114.114.114
 server=/wwfchina.org/114.114.114.114
+server=/wwhlian.com/114.114.114.114
 server=/wwjia.com/114.114.114.114
 server=/wwjie.com/114.114.114.114
 server=/wwmhdq.com/114.114.114.114
