--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45252,6 +45252,7 @@ server=/hzqszl.com/114.114.114.114
 server=/hzqx.com/114.114.114.114
 server=/hzqxbg.com/114.114.114.114
 server=/hzr1.com/114.114.114.114
+server=/hzragine.com/114.114.114.114
 server=/hzranqu.com/114.114.114.114
 server=/hzrc.com/114.114.114.114
 server=/hzrdjt.com/114.114.114.114
