--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25675,6 +25675,7 @@ server=/denzacloud.com/114.114.114.114
 server=/deosin.com/114.114.114.114
 server=/dep-star.com/114.114.114.114
 server=/depailed.com/114.114.114.114
+server=/depamu.com/114.114.114.114
 server=/dependdns.com/114.114.114.114
 server=/depengwuyou.com/114.114.114.114
 server=/dephir.com/114.114.114.114
