--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84889,6 +84889,7 @@ server=/unithinker.com/114.114.114.114
 server=/unitod.com/114.114.114.114
 server=/unitrans-agency.com/114.114.114.114
 server=/unitrans-group.com/114.114.114.114
+server=/unitree.com/114.114.114.114
 server=/unitweld.com/114.114.114.114
 server=/unitworld.net/114.114.114.114
 server=/unitymanual.com/114.114.114.114
