--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45373,6 +45373,7 @@ server=/hzzhileng.com/114.114.114.114
 server=/hzzhiwei.com/114.114.114.114
 server=/hzzhonggang.net/114.114.114.114
 server=/hzzhonghao.com/114.114.114.114
+server=/hzzhuode.com/114.114.114.114
 server=/hzzhyl.com/114.114.114.114
 server=/hzzhzm.com/114.114.114.114
 server=/hzzjzk.com/114.114.114.114
