--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45102,6 +45102,7 @@ server=/hzeeec.com/114.114.114.114
 server=/hzefjs.com/114.114.114.114
 server=/hzeg.com/114.114.114.114
 server=/hzelec.com/114.114.114.114
+server=/hzepd.com/114.114.114.114
 server=/hzeyun.com/114.114.114.114
 server=/hzfc.cc/114.114.114.114
 server=/hzfeat.com/114.114.114.114
