accelerated-domains: add hzhl666.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45142,6 +45142,7 @@ server=/hzhfzx.com/114.114.114.114
 server=/hzhike.com/114.114.114.114
 server=/hzhisoft.com/114.114.114.114
 server=/hzhkai.com/114.114.114.114
+server=/hzhl666.com/114.114.114.114
 server=/hzhlcc.com/114.114.114.114
 server=/hzhlpt.com/114.114.114.114
 server=/hzhltec.com/114.114.114.114
