accelerated-domains: add ruidengkeji.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72651,6 +72651,7 @@ server=/ruidaedu.com/114.114.114.114
 server=/ruidan.com/114.114.114.114
 server=/ruidang.com/114.114.114.114
 server=/ruidaxx.com/114.114.114.114
+server=/ruidengkeji.com/114.114.114.114
 server=/ruideppt.com/114.114.114.114
 server=/ruideppt.net/114.114.114.114
 server=/ruidongcloud.com/114.114.114.114
