accelerated-domains: add hzkemengda.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45196,6 +45196,7 @@ server=/hzkaiming.com/114.114.114.114
 server=/hzkangji.com/114.114.114.114
 server=/hzkayo.com/114.114.114.114
 server=/hzkcck.com/114.114.114.114
+server=/hzkemengda.com/114.114.114.114
 server=/hzkesheng.com/114.114.114.114
 server=/hzkjn.com/114.114.114.114
 server=/hzkln.com/114.114.114.114
