accelerated-domains: add hzzqzc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45383,6 +45383,7 @@ server=/hzzhzm.com/114.114.114.114
 server=/hzzjzk.com/114.114.114.114
 server=/hzzkj.net/114.114.114.114
 server=/hzzp.com/114.114.114.114
+server=/hzzqzc.com/114.114.114.114
 server=/hzzrmc.com/114.114.114.114
 server=/hzzsfs.com/114.114.114.114
 server=/hzztkj.com/114.114.114.114
