accelerated-domains: add hzsbysj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45276,6 +45276,7 @@ server=/hzs360.com/114.114.114.114
 server=/hzsaifang.com/114.114.114.114
 server=/hzsanjiaomao.com/114.114.114.114
 server=/hzsaso.com/114.114.114.114
+server=/hzsbysj.com/114.114.114.114
 server=/hzsbz.com/114.114.114.114
 server=/hzscxsj.com/114.114.114.114
 server=/hzsdjzgs.com/114.114.114.114
