--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45310,6 +45310,7 @@ server=/hztdjt.com/114.114.114.114
 server=/hzteaexpo.com/114.114.114.114
 server=/hztek.com/114.114.114.114
 server=/hzthinker.net/114.114.114.114
+server=/hztianlang.com/114.114.114.114
 server=/hztiger.com/114.114.114.114
 server=/hztssy.com/114.114.114.114
 server=/hztuoliang.com/114.114.114.114
