--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20208,6 +20208,7 @@ server=/chinanums.com/114.114.114.114
 server=/chinaobp.com/114.114.114.114
 server=/chinaoceanwide.com/114.114.114.114
 server=/chinaoct.com/114.114.114.114
+server=/chinaoly.com/114.114.114.114
 server=/chinaonward.net/114.114.114.114
 server=/chinaopc.org/114.114.114.114
 server=/chinaopen.com/114.114.114.114
