accelerated-domains: add hangzhouweifeng.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39701,6 +39701,7 @@ server=/hangzhoumengfa.com/114.114.114.114
 server=/hangzhouqisheng.com/114.114.114.114
 server=/hangzhousports.com/114.114.114.114
 server=/hangzhoutianqi114.com/114.114.114.114
+server=/hangzhouweifeng.com/114.114.114.114
 server=/hangzhouyiyao.com/114.114.114.114
 server=/hangzhouyq.com/114.114.114.114
 server=/hangzhouzhiqi.com/114.114.114.114
