--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100686,6 +100686,7 @@ server=/zhetian.org/114.114.114.114
 server=/zheurl.com/114.114.114.114
 server=/zhewanji.net/114.114.114.114
 server=/zhexi.tech/114.114.114.114
+server=/zhexingzx.com/114.114.114.114
 server=/zhexinit.com/114.114.114.114
 server=/zheye.com/114.114.114.114
 server=/zheyibu.com/114.114.114.114
