accelerated-domains: add zhenggang.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100582,6 +100582,7 @@ server=/zhengerpin.com/114.114.114.114
 server=/zhengfalaw.com/114.114.114.114
 server=/zhengfayunpt.com/114.114.114.114
 server=/zhengfengnet.com/114.114.114.114
+server=/zhenggang.org/114.114.114.114
 server=/zhenggui.com/114.114.114.114
 server=/zhengguzhishen.com/114.114.114.114
 server=/zhenghangplc.com/114.114.114.114
