--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20259,6 +20259,7 @@ server=/chinardr.net/114.114.114.114
 server=/chinaredstar.com/114.114.114.114
 server=/chinaredsun.com/114.114.114.114
 server=/chinaren.com/114.114.114.114
+server=/chinaresin.com/114.114.114.114
 server=/chinarespiratory.org/114.114.114.114
 server=/chinarootdesign.com/114.114.114.114
 server=/chinartlaw.com/114.114.114.114
