--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90115,6 +90115,7 @@ server=/wwwzzz.com/114.114.114.114
 server=/wwxrmyy.com/114.114.114.114
 server=/wx-api.net/114.114.114.114
 server=/wx-data.com/114.114.114.114
+server=/wx-jsj.com/114.114.114.114
 server=/wx-youyan.net/114.114.114.114
 server=/wx.com/114.114.114.114
 server=/wx135.com/114.114.114.114
