accelerated-domains: add yingpaikeji.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96212,6 +96212,7 @@ server=/yingmei.me/114.114.114.114
 server=/yingmi.com/114.114.114.114
 server=/yingming.net/114.114.114.114
 server=/yingpaigame.com/114.114.114.114
+server=/yingpaikeji.com/114.114.114.114
 server=/yingpengbz.com/114.114.114.114
 server=/yingpost.com/114.114.114.114
 server=/yingriliuti.com/114.114.114.114
