accelerated-domains: add zahuod.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99436,6 +99436,7 @@ server=/zagrebdental.com/114.114.114.114
 server=/zahtb.com/114.114.114.114
 server=/zahui.fan/114.114.114.114
 server=/zahuishi.com/114.114.114.114
+server=/zahuod.com/114.114.114.114
 server=/zahuoji.com/114.114.114.114
 server=/zai-art.com/114.114.114.114
 server=/zai-xian.com/114.114.114.114
