accelerated-domains: add hhitgroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41571,6 +41571,7 @@ server=/hhhtfdj.com/114.114.114.114
 server=/hhhtfin.com/114.114.114.114
 server=/hhhtscf.com/114.114.114.114
 server=/hhhtyg.com/114.114.114.114
+server=/hhitgroup.com/114.114.114.114
 server=/hhjctest.com/114.114.114.114
 server=/hhjgqh.com/114.114.114.114
 server=/hhjsyxh.com/114.114.114.114
