accelerated-domains: add taihe-hr.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80639,6 +80639,7 @@ server=/taigaoxiao.com/114.114.114.114
 server=/taihaikj.com/114.114.114.114
 server=/taihainet.com/114.114.114.114
 server=/taihaocn.com/114.114.114.114
+server=/taihe-hr.com/114.114.114.114
 server=/taihe.com/114.114.114.114
 server=/taihecap.com/114.114.114.114
 server=/taihehospital.com/114.114.114.114
