--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45235,6 +45235,7 @@ server=/hzmobius.com/114.114.114.114
 server=/hzmogo.com/114.114.114.114
 server=/hzmt001.com/114.114.114.114
 server=/hzmtg.com/114.114.114.114
+server=/hzmtjx.com/114.114.114.114
 server=/hzmxkj.net/114.114.114.114
 server=/hzmygg.com/114.114.114.114
 server=/hzmylike.com/114.114.114.114
