--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45118,6 +45118,7 @@ server=/hzfpay.com/114.114.114.114
 server=/hzfucai.net/114.114.114.114
 server=/hzfuturehos.com/114.114.114.114
 server=/hzgangdun.com/114.114.114.114
+server=/hzgcec.com/114.114.114.114
 server=/hzgh.org/114.114.114.114
 server=/hzgjj.com/114.114.114.114
 server=/hzglsb.com/114.114.114.114
