accelerated-domains: add weiyunfushi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87809,6 +87809,7 @@ server=/weiyueread.com/114.114.114.114
 server=/weiyun.com/114.114.114.114
 server=/weiyun001.com/114.114.114.114
 server=/weiyunchong.com/114.114.114.114
+server=/weiyunfushi.com/114.114.114.114
 server=/weiyunjian.com/114.114.114.114
 server=/weiyuntop.com/114.114.114.114
 server=/weiyunyingxiang.com/114.114.114.114
