--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24757,6 +24757,7 @@ server=/daka.net/114.114.114.114
 server=/dakage.com/114.114.114.114
 server=/dakahr.com/114.114.114.114
 server=/dakamao8.com/114.114.114.114
+server=/dakangchem.com/114.114.114.114
 server=/dakao8.com/114.114.114.114
 server=/dakao8.net/114.114.114.114
 server=/dakapath.com/114.114.114.114
