accelerated-domains: add hzwqscl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45340,6 +45340,7 @@ server=/hzwindpower.com/114.114.114.114
 server=/hzwluo.com/114.114.114.114
 server=/hzwmw.com/114.114.114.114
 server=/hzwotu.com/114.114.114.114
+server=/hzwqscl.com/114.114.114.114
 server=/hzwsa.com/114.114.114.114
 server=/hzwsjyjt.com/114.114.114.114
 server=/hzwtech.com/114.114.114.114
