accelerated-domains: add tuozhilight.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83899,6 +83899,7 @@ server=/tuoyuantec.com/114.114.114.114
 server=/tuoyuvip.com/114.114.114.114
 server=/tuozhe8.com/114.114.114.114
 server=/tuozheng168.com/114.114.114.114
+server=/tuozhilight.com/114.114.114.114
 server=/tupian114.com/114.114.114.114
 server=/tupian1234.com/114.114.114.114
 server=/tupian365.com/114.114.114.114
