accelerated-domains: add windesign.cc

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88706,6 +88706,7 @@ server=/wind.moe/114.114.114.114
 server=/windbg.download.prss.microsoft.com/114.114.114.114
 server=/windcoder.com/114.114.114.114
 server=/winde.cc/114.114.114.114
+server=/windesign.cc/114.114.114.114
 server=/windeyenergy.com/114.114.114.114
 server=/windfonts.com/114.114.114.114
 server=/windhamchina.com/114.114.114.114
