--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52273,6 +52273,7 @@ server=/jysyzk.com/114.114.114.114
 server=/jytaier.com/114.114.114.114
 server=/jytcdq.com/114.114.114.114
 server=/jytech.info/114.114.114.114
+server=/jytek.com/114.114.114.114
 server=/jytjsgyp.com/114.114.114.114
 server=/jytjw.com/114.114.114.114
 server=/jytrump.com/114.114.114.114
