--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20336,6 +20336,7 @@ server=/chinatet.com/114.114.114.114
 server=/chinatex.com/114.114.114.114
 server=/chinatex.net/114.114.114.114
 server=/chinatex.org/114.114.114.114
+server=/chinatg.com/114.114.114.114
 server=/chinatibetnews.com/114.114.114.114
 server=/chinaticket.com/114.114.114.114
 server=/chinatikfans.com/114.114.114.114
