accelerated-domains: add gxnxdb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37742,6 +37742,7 @@ server=/gxnsjt.com/114.114.114.114
 server=/gxntjz.com/114.114.114.114
 server=/gxnumba.com/114.114.114.114
 server=/gxnwjt.com/114.114.114.114
+server=/gxnxdb.com/114.114.114.114
 server=/gxnxgd.com/114.114.114.114
 server=/gxnydq.com/114.114.114.114
 server=/gxnymt.com/114.114.114.114
