accelerated-domains: add hzfllbj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45116,6 +45116,7 @@ server=/hzfeat.com/114.114.114.114
 server=/hzfeiyao.com/114.114.114.114
 server=/hzfesco.com/114.114.114.114
 server=/hzfj.com/114.114.114.114
+server=/hzfllbj.com/114.114.114.114
 server=/hzfolo.com/114.114.114.114
 server=/hzfpay.com/114.114.114.114
 server=/hzfucai.net/114.114.114.114
