accelerated-domains: add hzhfdc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45148,6 +45148,7 @@ server=/hzhehui.com/114.114.114.114
 server=/hzhengshang.com/114.114.114.114
 server=/hzhengtong.com/114.114.114.114
 server=/hzhf.com/114.114.114.114
+server=/hzhfdc.com/114.114.114.114
 server=/hzhfzx.com/114.114.114.114
 server=/hzhike.com/114.114.114.114
 server=/hzhisoft.com/114.114.114.114
