--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45257,6 +45257,7 @@ server=/hzntjt.com/114.114.114.114
 server=/hznuodalaowu.com/114.114.114.114
 server=/hznzcn.com/114.114.114.114
 server=/hzodfwxs.com/114.114.114.114
+server=/hzorganicchem.com/114.114.114.114
 server=/hzou.net/114.114.114.114
 server=/hzpgc.com/114.114.114.114
 server=/hzpzs.net/114.114.114.114
