accelerated-domains: add hzqyhydrogen.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45270,6 +45270,7 @@ server=/hzqlpt.com/114.114.114.114
 server=/hzqszl.com/114.114.114.114
 server=/hzqx.com/114.114.114.114
 server=/hzqxbg.com/114.114.114.114
+server=/hzqyhydrogen.com/114.114.114.114
 server=/hzr1.com/114.114.114.114
 server=/hzragine.com/114.114.114.114
 server=/hzranqu.com/114.114.114.114
