--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99909,6 +99909,7 @@ server=/zexiaoqiao.com/114.114.114.114
 server=/zeyouquan.com/114.114.114.114
 server=/zeyuan.shop/114.114.114.114
 server=/zeze.com/114.114.114.114
+server=/zezhengcnc.com/114.114.114.114
 server=/zezhenwangluo.com/114.114.114.114
 server=/zezhuanggd.com/114.114.114.114
 server=/zf-8.com/114.114.114.114
