accelerated-domains: add hangtu-china.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39683,6 +39683,7 @@ server=/hangruntech.com/114.114.114.114
 server=/hangshitech.com/114.114.114.114
 server=/hangsi-bio.com/114.114.114.114
 server=/hangtianride.com/114.114.114.114
+server=/hangtu-china.com/114.114.114.114
 server=/hangtunggroup.com/114.114.114.114
 server=/hanguangbaihuo.com/114.114.114.114
 server=/hanguu.com/114.114.114.114
