accelerated-domains: add hzmest.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45236,6 +45236,7 @@ server=/hzmctech.com/114.114.114.114
 server=/hzmdch.com/114.114.114.114
 server=/hzmdcnc.com/114.114.114.114
 server=/hzmeizhuo.com/114.114.114.114
+server=/hzmest.com/114.114.114.114
 server=/hzmetro.com/114.114.114.114
 server=/hzmkdq.com/114.114.114.114
 server=/hzmobius.com/114.114.114.114
