--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45142,6 +45142,7 @@ server=/hzh0775.com/114.114.114.114
 server=/hzh1.com/114.114.114.114
 server=/hzhadx.com/114.114.114.114
 server=/hzhanbo.com/114.114.114.114
+server=/hzhchj.com/114.114.114.114
 server=/hzhcloud.com/114.114.114.114
 server=/hzhebei.com/114.114.114.114
 server=/hzhehua.com/114.114.114.114
