--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79090,6 +79090,7 @@ server=/sunbowhospital.com/114.114.114.114
 server=/sunboxsoft.com/114.114.114.114
 server=/sunboyu.com/114.114.114.114
 server=/suncereltd.com/114.114.114.114
+server=/suncjm.com/114.114.114.114
 server=/sundan.com/114.114.114.114
 server=/sundns.com/114.114.114.114
 server=/sundray.com/114.114.114.114
