--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22618,6 +22618,7 @@ server=/coco413.com/114.114.114.114
 server=/cocoachina.com/114.114.114.114
 server=/cocodiy.com/114.114.114.114
 server=/cocogoat.work/114.114.114.114
+server=/cocohealthcare.com/114.114.114.114
 server=/coconuet.com/114.114.114.114
 server=/cocoon-data.com/114.114.114.114
 server=/cocophp.com/114.114.114.114
