--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45307,6 +45307,7 @@ server=/hzshanjie.com/114.114.114.114
 server=/hzshantai.com/114.114.114.114
 server=/hzshudian.com/114.114.114.114
 server=/hzslgzx.com/114.114.114.114
+server=/hzsmbio.com/114.114.114.114
 server=/hzsnowcom.com/114.114.114.114
 server=/hzsource.com/114.114.114.114
 server=/hzspeed.com/114.114.114.114
