accelerated-domains: add hzmgdj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45241,6 +45241,7 @@ server=/hzmdcnc.com/114.114.114.114
 server=/hzmeizhuo.com/114.114.114.114
 server=/hzmest.com/114.114.114.114
 server=/hzmetro.com/114.114.114.114
+server=/hzmgdj.com/114.114.114.114
 server=/hzmkdq.com/114.114.114.114
 server=/hzmobius.com/114.114.114.114
 server=/hzmogo.com/114.114.114.114
