accelerated-domains: add ftwafer.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32571,6 +32571,7 @@ server=/ftswcc.com/114.114.114.114
 server=/fttrs.com/114.114.114.114
 server=/ftuan.com/114.114.114.114
 server=/ftvsingingcontest.com/114.114.114.114
+server=/ftwafer.com/114.114.114.114
 server=/ftxad.com/114.114.114.114
 server=/ftxgame.com/114.114.114.114
 server=/ftxia.com/114.114.114.114
