--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45162,6 +45162,7 @@ server=/hzhl666.com/114.114.114.114
 server=/hzhlcc.com/114.114.114.114
 server=/hzhlpt.com/114.114.114.114
 server=/hzhltec.com/114.114.114.114
+server=/hzhm888.com/114.114.114.114
 server=/hzhnano.com/114.114.114.114
 server=/hzhnzdh.com/114.114.114.114
 server=/hzhoisting.com/114.114.114.114
