accelerated-domains: add hzyjd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45382,6 +45382,7 @@ server=/hzyestar.com/114.114.114.114
 server=/hzyhjg.com/114.114.114.114
 server=/hzyhzp.com/114.114.114.114
 server=/hzyidc.com/114.114.114.114
+server=/hzyjd.com/114.114.114.114
 server=/hzyllh.com/114.114.114.114
 server=/hzylpco.com/114.114.114.114
 server=/hzyn888.com/114.114.114.114
