--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40823,6 +40823,7 @@ server=/hdyxi.com/114.114.114.114
 server=/hdyy95.com/114.114.114.114
 server=/hdyzsw.com/114.114.114.114
 server=/hdzbgs.com/114.114.114.114
+server=/hdzc.com/114.114.114.114
 server=/hdzc.net/114.114.114.114
 server=/hdzcwlian.com/114.114.114.114
 server=/hdzp.com/114.114.114.114
