accelerated-domains: add slot-china.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77421,6 +77421,7 @@ server=/slodon.net/114.114.114.114
 server=/sloer.com/114.114.114.114
 server=/slogra.com/114.114.114.114
 server=/slooti.com/114.114.114.114
+server=/slot-china.com/114.114.114.114
 server=/slot4.net/114.114.114.114
 server=/slovakia-visacenter.com/114.114.114.114
 server=/slovenia-visacenter.com/114.114.114.114
