accelerated-domains: add zjjh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102085,6 +102085,7 @@ server=/zjjd.org/114.114.114.114
 server=/zjjgcyz.com/114.114.114.114
 server=/zjjgy.com/114.114.114.114
 server=/zjjgylydjc.com/114.114.114.114
+server=/zjjh.com/114.114.114.114
 server=/zjjiaozhou.com/114.114.114.114
 server=/zjjizhi.com/114.114.114.114
 server=/zjjlfny.com/114.114.114.114
