--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83288,6 +83288,7 @@ server=/trainnets.com/114.114.114.114
 server=/trait-wholesale.com/114.114.114.114
 server=/traktalent.com/114.114.114.114
 server=/tranbbs.com/114.114.114.114
+server=/tranlion.com/114.114.114.114
 server=/tranplanet.com/114.114.114.114
 server=/trans4e.com/114.114.114.114
 server=/transduck.com/114.114.114.114
