accelerated-domains: add huidaqg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44129,6 +44129,7 @@ server=/huidafrp.com/114.114.114.114
 server=/huidan.net/114.114.114.114
 server=/huidang.com/114.114.114.114
 server=/huidaocaishui.com/114.114.114.114
+server=/huidaqg.com/114.114.114.114
 server=/huidazhe.vip/114.114.114.114
 server=/huiddo.com/114.114.114.114
 server=/huide-medical.com/114.114.114.114
