accelerated-domains: add ghsmc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34375,6 +34375,7 @@ server=/ghs.net/114.114.114.114
 server=/ghschool.com/114.114.114.114
 server=/ghsd16888.com/114.114.114.114
 server=/ghsense.com/114.114.114.114
+server=/ghsmc.com/114.114.114.114
 server=/ghsmgs.com/114.114.114.114
 server=/ghsmpwalmart.com/114.114.114.114
 server=/ghsuliao.com/114.114.114.114
