accelerated-domains: add dobechina.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27028,6 +27028,7 @@ server=/do35.com/114.114.114.114
 server=/doabit.com/114.114.114.114
 server=/doata.net/114.114.114.114
 server=/dobe-game.com/114.114.114.114
+server=/dobechina.com/114.114.114.114
 server=/dobest.com/114.114.114.114
 server=/dobosc.com/114.114.114.114
 server=/dobunkan.com/114.114.114.114
