accelerated-domains: add huashanglawyer.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43843,6 +43843,7 @@ server=/huas.co/114.114.114.114
 server=/huash.com/114.114.114.114
 server=/huashan-neurosurgery.com/114.114.114.114
 server=/huashangcbbtv.com/114.114.114.114
+server=/huashanglawyer.com/114.114.114.114
 server=/huashangtop.com/114.114.114.114
 server=/huashanxin.com/114.114.114.114
 server=/huashen-edu.com/114.114.114.114
