accelerated-domains: add hedaenergy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40935,6 +40935,7 @@ server=/heclife.com/114.114.114.114
 server=/heclouds.com/114.114.114.114
 server=/hecoe.com/114.114.114.114
 server=/hecpharm.com/114.114.114.114
+server=/hedaenergy.com/114.114.114.114
 server=/hedaoapp.com/114.114.114.114
 server=/hedaozi.com/114.114.114.114
 server=/hedasudi.com/114.114.114.114
