accelerated-domains: add towelltech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83177,6 +83177,7 @@ server=/touzime.com/114.114.114.114
 server=/touzime.net/114.114.114.114
 server=/touzizn.com/114.114.114.114
 server=/towavephone.com/114.114.114.114
+server=/towelltech.com/114.114.114.114
 server=/tower.im/114.114.114.114
 server=/towinor.com/114.114.114.114
 server=/towmfs.com/114.114.114.114
