--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44677,6 +44677,7 @@ server=/hwadmin.com/114.114.114.114
 server=/hwagain.com/114.114.114.114
 server=/hwait.com/114.114.114.114
 server=/hwangda.com/114.114.114.114
+server=/hwaq.cc/114.114.114.114
 server=/hwashi.com/114.114.114.114
 server=/hwasmart.com/114.114.114.114
 server=/hwastro.com/114.114.114.114
