accelerated-domains: add thenewhotel.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81787,6 +81787,7 @@ server=/themisweeps.com/114.114.114.114
 server=/then9.com/114.114.114.114
 server=/thenburn.com/114.114.114.114
 server=/thenew123.com/114.114.114.114
+server=/thenewhotel.com/114.114.114.114
 server=/thenewstreams.com/114.114.114.114
 server=/thenextravelmarket.com/114.114.114.114
 server=/theoborn.com/114.114.114.114
