--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102143,6 +102143,7 @@ server=/zjmct.com/114.114.114.114
 server=/zjmi-mall.com/114.114.114.114
 server=/zjminghong.com/114.114.114.114
 server=/zjmingzhen.com/114.114.114.114
+server=/zjmkzx.com/114.114.114.114
 server=/zjmobile.com/114.114.114.114
 server=/zjmoney.com/114.114.114.114
 server=/zjmrhpt.com/114.114.114.114
