accelerated-domains: add camce-rc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17443,6 +17443,7 @@ server=/cambricon.com/114.114.114.114
 server=/camc.cc/114.114.114.114
 server=/camcap.us/114.114.114.114
 server=/camcard.com/114.114.114.114
+server=/camce-rc.com/114.114.114.114
 server=/came-online.org/114.114.114.114
 server=/camera360.com/114.114.114.114
 server=/camhen.com/114.114.114.114
