--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21254,6 +21254,7 @@ server=/cjshipin.net/114.114.114.114
 server=/cjslcg.com/114.114.114.114
 server=/cjsy.net/114.114.114.114
 server=/cjsyedu.com/114.114.114.114
+server=/cjtl.com/114.114.114.114
 server=/cjtmsp.com/114.114.114.114
 server=/cjveg.com/114.114.114.114
 server=/cjwcjyy.com/114.114.114.114
