accelerated-domains: add guozhuangxincai.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36384,6 +36384,7 @@ server=/guozhijun.com/114.114.114.114
 server=/guozhivip.com/114.114.114.114
 server=/guozhoutrade.com/114.114.114.114
 server=/guozhuan.com/114.114.114.114
+server=/guozhuangxincai.com/114.114.114.114
 server=/guozi.org/114.114.114.114
 server=/guoziyx.com/114.114.114.114
 server=/gupang.com/114.114.114.114
