--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97241,6 +97241,7 @@ server=/yongchaohuagong.com/114.114.114.114
 server=/yongche.name/114.114.114.114
 server=/yongche.org/114.114.114.114
 server=/yongchengren.com/114.114.114.114
+server=/yongdachina.com/114.114.114.114
 server=/yongdaoyun.com/114.114.114.114
 server=/yongdasteel.com/114.114.114.114
 server=/yongfan99.com/114.114.114.114
