accelerated-domains: add yulongsteelpipe.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98464,6 +98464,7 @@ server=/yulinshidefu.com/114.114.114.114
 server=/yulinyw.com/114.114.114.114
 server=/yulongdt.com/114.114.114.114
 server=/yulongjun.com/114.114.114.114
+server=/yulongsteelpipe.com/114.114.114.114
 server=/yulongwanski.com/114.114.114.114
 server=/yuloo.com/114.114.114.114
 server=/yulore.com/114.114.114.114
