--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18600,6 +18600,7 @@ server=/cedarhd.com/114.114.114.114
 server=/cediy.com/114.114.114.114
 server=/cedock.com/114.114.114.114
 server=/ceeger.com/114.114.114.114
+server=/ceegpower.com/114.114.114.114
 server=/ceeji.net/114.114.114.114
 server=/ceepsp.com/114.114.114.114
 server=/ceeunion.com/114.114.114.114
