--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19668,6 +19668,7 @@ server=/china-hhsj.com/114.114.114.114
 server=/china-highway.com/114.114.114.114
 server=/china-holiday.com/114.114.114.114
 server=/china-hongfei.com/114.114.114.114
+server=/china-hp.com/114.114.114.114
 server=/china-hrg.com/114.114.114.114
 server=/china-huazhou.com/114.114.114.114
 server=/china-hxzb.com/114.114.114.114
