--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28754,6 +28754,7 @@ server=/easywza.com/114.114.114.114
 server=/easyzw.com/114.114.114.114
 server=/eating8.com/114.114.114.114
 server=/eaton-samc.com/114.114.114.114
+server=/eatonbusbar.com/114.114.114.114
 server=/eatuo.com/114.114.114.114
 server=/eavic.com/114.114.114.114
 server=/eawh.com/114.114.114.114
