--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39427,6 +39427,7 @@ server=/haiintelligent.com/114.114.114.114
 server=/haijia.org/114.114.114.114
 server=/haijianchuxing.com/114.114.114.114
 server=/haijiangzx.com/114.114.114.114
+server=/haijianstock.com/114.114.114.114
 server=/haijiaonet.com/114.114.114.114
 server=/haijiaoshi.com/114.114.114.114
 server=/haijiasu.com/114.114.114.114
