--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42180,6 +42180,7 @@ server=/hlmmold.com/114.114.114.114
 server=/hlnhw.com/114.114.114.114
 server=/hlnmg.com/114.114.114.114
 server=/hlnpic.com/114.114.114.114
+server=/hlnpm.com/114.114.114.114
 server=/hlo-trade.com/114.114.114.114
 server=/hloenda-fffffffcai.com/114.114.114.114
 server=/hloong.com/114.114.114.114
