--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48895,6 +48895,7 @@ server=/jglm.cc/114.114.114.114
 server=/jgs-ds.com/114.114.114.114
 server=/jgscct.com/114.114.114.114
 server=/jgsdaily.com/114.114.114.114
+server=/jgsemicon.com/114.114.114.114
 server=/jgstny.com/114.114.114.114
 server=/jgtc315.com/114.114.114.114
 server=/jguanjia.com/114.114.114.114
