accelerated-domains: add meta-stone.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60336,6 +60336,7 @@ server=/messecloud.com/114.114.114.114
 server=/mesule.com/114.114.114.114
 server=/met.red/114.114.114.114
 server=/met169.com/114.114.114.114
+server=/meta-stone.com/114.114.114.114
 server=/meta-verse.co/114.114.114.114
 server=/meta-xuantan.com/114.114.114.114
 server=/meta.law/114.114.114.114
