accelerated-domains: add sidike.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76692,6 +76692,7 @@ server=/sicoll.com/114.114.114.114
 server=/sicosemi.com/114.114.114.114
 server=/sicreat.com/114.114.114.114
 server=/sicuo.com/114.114.114.114
+server=/sidike.com/114.114.114.114
 server=/sidri.com/114.114.114.114
 server=/siengine.com/114.114.114.114
 server=/sieredu.com/114.114.114.114
