--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88794,6 +88794,7 @@ server=/winjoinit.com/114.114.114.114
 server=/winkingworks.com/114.114.114.114
 server=/winkkie.com/114.114.114.114
 server=/winksi.com/114.114.114.114
+server=/winlongtech.com/114.114.114.114
 server=/winmoes.com/114.114.114.114
 server=/winndoo.com/114.114.114.114
 server=/winner-hitech.com/114.114.114.114
