accelerated-domains: add yawei.cc

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95168,6 +95168,7 @@ server=/yaucn.com/114.114.114.114
 server=/yauuy.com/114.114.114.114
 server=/yawancaiwu.com/114.114.114.114
 server=/yawbbs.com/114.114.114.114
+server=/yawei.cc/114.114.114.114
 server=/yaxbpx.com/114.114.114.114
 server=/yaxi.net/114.114.114.114
 server=/yaxiaodong.com/114.114.114.114
