--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9105,6 +9105,7 @@ server=/abacaipu.com/114.114.114.114
 server=/abackup.com/114.114.114.114
 server=/abaizx.com/114.114.114.114
 server=/abardeen-online.com/114.114.114.114
+server=/abbbio.com/114.114.114.114
 server=/abbkine.com/114.114.114.114
 server=/abbooa.com/114.114.114.114
 server=/abbyschoice.net/114.114.114.114
