--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25240,6 +25240,7 @@ server=/dazhangqiu.com/114.114.114.114
 server=/dazhantai.com/114.114.114.114
 server=/dazhe5.com/114.114.114.114
 server=/dazheda.com/114.114.114.114
+server=/dazhengtop.com/114.114.114.114
 server=/dazhenzimiao.com/114.114.114.114
 server=/dazhewa.com/114.114.114.114
 server=/dazhistudy.com/114.114.114.114
