--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26077,6 +26077,7 @@ server=/dhsky.org/114.114.114.114
 server=/dhsrmyy.com/114.114.114.114
 server=/dhszyy.net/114.114.114.114
 server=/dht5867.com/114.114.114.114
+server=/dhtopology.com/114.114.114.114
 server=/dhuili.com/114.114.114.114
 server=/dhukul.com/114.114.114.114
 server=/dhvisiontech.com/114.114.114.114
