--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39369,6 +39369,7 @@ server=/hai360.com/114.114.114.114
 server=/haianbank.com/114.114.114.114
 server=/haianedu.net/114.114.114.114
 server=/haianw.com/114.114.114.114
+server=/haianyaoye.com/114.114.114.114
 server=/haianzhuangshi.com/114.114.114.114
 server=/haibao.com/114.114.114.114
 server=/haibao123.xyz/114.114.114.114
