--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51243,6 +51243,7 @@ server=/jsehealth.com/114.114.114.114
 server=/jsendian.com/114.114.114.114
 server=/jsenews.com/114.114.114.114
 server=/jseoptics.com/114.114.114.114
+server=/jsep.com/114.114.114.114
 server=/jser.io/114.114.114.114
 server=/jsf666.com/114.114.114.114
 server=/jsfj.net/114.114.114.114
