--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51273,6 +51273,7 @@ server=/jsgoldenbridge.com/114.114.114.114
 server=/jsgongwei.com/114.114.114.114
 server=/jsgrb.com/114.114.114.114
 server=/jsgsyy.com/114.114.114.114
+server=/jsguohua.com/114.114.114.114
 server=/jsguolv.com/114.114.114.114
 server=/jsgwyw.org/114.114.114.114
 server=/jsgyrcb.com/114.114.114.114
