--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72805,6 +72805,7 @@ server=/rundamedical.com/114.114.114.114
 server=/runde666.net/114.114.114.114
 server=/rundefit.com/114.114.114.114
 server=/rundejy.com/114.114.114.114
+server=/runergy.com/114.114.114.114
 server=/runff.com/114.114.114.114
 server=/runfox.com/114.114.114.114
 server=/runfujin.com/114.114.114.114
