--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22877,6 +22877,7 @@ server=/congzhi.com/114.114.114.114
 server=/conhagroup.com/114.114.114.114
 server=/connectsixmedia.com/114.114.114.114
 server=/connorsaviation.com/114.114.114.114
+server=/conodmedical.com/114.114.114.114
 server=/conoha.vip/114.114.114.114
 server=/conpak.com.hk/114.114.114.114
 server=/conshow.com/114.114.114.114
