accelerated-domains: add baitongplastics.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13058,6 +13058,7 @@ server=/baithu.com/114.114.114.114
 server=/baitianinfo.com/114.114.114.114
 server=/baitiao.com/114.114.114.114
 server=/baitomould.com/114.114.114.114
+server=/baitongplastics.com/114.114.114.114
 server=/baitongwang.com/114.114.114.114
 server=/baitugu.com/114.114.114.114
 server=/baituibao.com/114.114.114.114
