--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21794,6 +21794,7 @@ server=/cn-c114.net/114.114.114.114
 server=/cn-caa.com/114.114.114.114
 server=/cn-cddc.com/114.114.114.114
 server=/cn-cg.com/114.114.114.114
+server=/cn-chenguang.com/114.114.114.114
 server=/cn-chx.com/114.114.114.114
 server=/cn-cr.com/114.114.114.114
 server=/cn-ebara.com/114.114.114.114
